--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -745,14 +745,16 @@ save_plot("selection/single-pop/moms_++_vs_py_pi2.pdf", p10, base_height=10, bas
 
 # Simple BGS model
 
+## Single Neutral Locus 
+
 ### Building Demes files
 
 ```{r, demes-BGS, include=F, eval=T, results=F, message=F, warning=F}
 
-N <- c(1000, 10000)
+N <- c(2500, 10000)
 u <- c(1e-5, 1e-6, 1e-7, 1e-8)
 r <- c(1e-5, 1e-6, 1e-7, 1e-8, 1e-9)
-s <- c(-1e-5, 2.5e-5, -1e-4, 2.5e-4, -1e-3)
+s <- c(-1e-5, -2.5e-5, -1e-4, -2.5e-4, -1e-3)
 
 # number of independent genomic windows, each corresponding to a two-locus system
 w <- 100
@@ -765,7 +767,7 @@ params$alpha <- 2 * params$N * params$s
 params$scenario <- 1:nrow(params)
 n_models <- nrow(params)
 
-write.csv(params, "selection/single-pop/simple_bgs/params.csv", quote=F, row.names=F)
+write.csv(params, "selection/single-pop/simple_bgs/single_neutral/params.csv", quote=F, row.names=F)
 
 Sys.setenv(num_models=n_models)
 
@@ -774,7 +776,169 @@ for(i in 1:n_models) {
   for(j in 1:w) { # left locus
   
       name <- paste("model_", i, "_l_", j, sep="")
-      sink(paste("selection/single-pop/simple_bgs/", name, ".yaml", sep=""))
+      sink(paste("selection/single-pop/simple_bgs/single_neutral/", name, ".yaml", sep=""))
+      
+      cat("time_units: generations\n")
+      cat("demes:\n")
+      cat("  - name: X\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        start_size: ")
+      cat(as.integer(params$N[i]))
+      cat("\n")
+      cat("metadata:\n")
+      cat("  - name: mutation\n")
+      cat("    left_factor: ")
+      cat(params$l[i])
+      cat("\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(params$u[i])
+      cat("]\n")
+      cat("  - name: recombination\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(j * params$r[i])
+      cat("]\n")
+      cat("  - name: selection\n")
+      cat("    start_time: .inf\n")
+      cat("    epochs:\n")
+      cat("      - end_time: 0\n")
+      cat("        rates: [")
+      cat(params$s[i])
+      cat("]\n")
+      
+      sink()
+  }
+}
+```
+
+### Running moments++
+
+```{bash run-moments++BGS, engine.opts='-i', include=F, eval=T, results=F, message=F, warning=F}
+
+source ~/.bashrc
+
+cd selection/single-pop/simple_bgs/
+
+for m in *.yaml
+do
+  momentspp params=opt.bpp F=$m O=20
+done
+
+cd ../../..
+```
+
+### Plots
+
+```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
+
+params <- read.table("selection/single-pop/simple_bgs/single_neutral/params.csv", sep=",", header=T)
+hr_BGS <- numeric(length=n_models)
+
+for(i in 1:n_models) {
+  
+  pi0 <- params$pi0[i]  
+  one_minus_f <- numeric(length=w)
+  
+  for(j in 1:w) { # left locus
+  
+    name <- paste("model_", i, "_l_", j, "_expectations.txt", sep="")
+    expectations <- read.table(paste("selection/single-pop/simple_bgs/single_neutral/", name, sep=""))
+      
+    hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
+    one_minus_f[j] <- hr / pi0
+  }
+  
+  hr_BGS[i] <- pi0 * prod(one_minus_f)
+}
+
+params$hr_BGS <- hr_BGS
+
+p1 <- ggplot(data=params[params$u==1e-8,], aes(x=s, y=hr_BGS, color=as.factor(N)))
+p1 <- p1 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+p1 <- p1 + geom_hline(data=params[params$u==1e-8,], aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+p1 <- p1 + scale_x_continuous(breaks=pretty_breaks())
+p1 <- p1 + scale_y_log10(breaks=c(5e-5, 1e-4, 2e-4), labels=function(x) format(x, scientific=T))
+p1 <- p1 + labs(title="Two-locus Hr BGS", x="s", y=expression(mu=1e-8))
+p1 <- p1 + theme(axis.title=element_text(size=16), 
+                 axis.text=element_text(size=12), 
+                 strip.text.x=element_text(size=16), 
+                 strip.text.y=element_text(size=16),
+                 axis.title.x=element_blank(),
+                 axis.text.x=element_blank(),
+                 axis.ticks.x=element_blank(),
+                 legend.text=element_text(size=16), 
+                 legend.position="none")
+
+p2 <- ggplot(data=params[params$u==1e-7,], aes(x=s, y=hr_BGS, color=as.factor(N)))
+p2 <- p2 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+p2 <- p2 + geom_hline(data=params[params$u==1e-7,], aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+p2 <- p2 + scale_x_continuous(breaks=pretty_breaks())
+p2 <- p2 + scale_y_log10(breaks=c(4e-4, 1e-3, 2e-3), labels=function(x) format(x, scientific=T))
+p2 <- p2 + labs(title=NULL, x="s", y=expression(mu=1e-7))
+p2 <- p2 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12), 
+                 strip.text.x=element_blank(), 
+                 axis.title.x=element_blank(),
+                 axis.text.x=element_blank(),
+                 axis.ticks.x=element_blank(),
+                 legend.text=element_text(size=16),
+                 legend.position="none")
+
+p3 <- ggplot(data=params[params$u==1e-6,], aes(x=s, y=hr_BGS, color=as.factor(N)))
+p3 <- p3 + geom_line() + geom_point(size=3) + facet_wrap(~r, nrow=1) + theme_bw()
+p3 <- p3 + geom_hline(data=params[params$u==1e-6,], aes(yintercept=pi0, color=as.factor(N)), linetype="dashed")
+p3 <- p3 + scale_x_continuous(breaks=pretty_breaks())
+p3 <- p3 + scale_y_log10(breaks=c(1e-7, 1e-5, 1e-3, 1e-2), labels=function(x) format(x, scientific=T))
+p3 <- p3 + labs(title=NULL, x="s", y=expression(mu=1e-6))
+p3 <- p3 + theme(axis.title=element_text(size=16),
+                 axis.text=element_text(size=12), 
+                 strip.text.x=element_blank(), 
+                 strip.text.y=element_text(size=16),
+                 axis.text.x=element_text(angle=90, size=12, vjust=0.5, hjust=1.0),
+                 legend.text=element_text(size=16), 
+                 legend.position="bottom")
+
+bgs_plot <- plot_grid(p1, p2, p3, ncol=1, rel_heights=c(1.15, 1, 1.25))
+bgs_plot
+```
+
+
+## Multiple Neutral Locui
+
+### Building Demes files
+
+```{r, demes-BGS, include=F, eval=T, results=F, message=F, warning=F}
+
+N <- c(10000)
+u <- c(1e-6)
+r <- c(1e-5, 1e-6, 1e-7, 1e-8)
+s <- c(-1e-5, -1e-4, -1e-3)
+
+# number of independent genomic windows, each corresponding to a two-locus system
+w <- 100
+# length of each genomic block
+l <- 100
+
+params <- crossing(N, u, r, s, w, l)
+params$pi0 <- 2 * params$N * params$u
+params$alpha <- 2 * params$N * params$s
+params$scenario <- 1:nrow(params)
+n_models <- nrow(params)
+
+write.csv(params, "selection/single-pop/simple_bgs/mult_neutral/params.csv", quote=F, row.names=F)
+
+Sys.setenv(num_models=n_models)
+
+for(i in 1:n_models) {
+  
+  for(j in 1:w) { # left locus
+  
+      name <- paste("model_", i, "_l_", j, sep="")
+      sink(paste("selection/single-pop/simple_bgs/mult_neutral", name, ".yaml", sep=""))
       
       cat("time_units: generations\n")
       cat("demes:\n")
@@ -834,7 +998,7 @@ cd ../../..
 
 ```{r, plots-BGS, include=T, eval=T, results=F, message=F, warning=F}
 
-params <- read.table("selection/single-pop/simple_bgs/params.csv", sep=",", header=T)
+params <- read.table("selection/single-pop/simple_bgs/single_neutral/params.csv", sep=",", header=T)
 hr_BGS <- numeric(length=n_models)
 
 for(i in 1:n_models) {
@@ -845,7 +1009,7 @@ for(i in 1:n_models) {
   for(j in 1:w) { # left locus
   
     name <- paste("model_", i, "_l_", j, "_expectations.txt", sep="")
-    expectations <- read.table(paste("selection/single-pop/simple_bgs/", name, sep=""))
+    expectations <- read.table(paste("selection/single-pop/simple_bgs/single_neutral", name, sep=""))
       
     hr <- expectations[expectations$V1 == "Hr_0_0",]$V3
     one_minus_f[j] <- hr / pi0
